<resources>
    <string name="app_name">Cash Colombino, S.A.</string>
    <string name="txt_bienvenida">Bienvenido a nuestra app !!</string>
    <string name="btnHola">Hola</string>
    <string name="chkHola">Correcto</string>
    <string name="act_name_nosotros">Nosotros</string>
    <string name="act_name_catalogo">Catálogo</string>
    <string name="act_name_marcas_propias">Marcas Propias</string>
    <string name="act_name_localizador">Localizador Productos</string>
    <string name="act_name_recetas">Recetas</string>
    <string name="act_name_pedidos">Pedidos</string>

    <string name="contacto">Contacto</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google plus</string>
    <string name="blog">Blog</string>
    <string name="compartir">Compartir</string>

    <string name="manuelBarea">Manuel Barea, S.A.</string>
    <string name="cashBarea">Cash Barea, S.A.</string>
    <string name="cashExtrem">Cash Extremeño, S.A.</string>
    <string name="textoSeleccion">Empresas ...</string>
    <string name="nosotros_colombino">Cash Colombino es una empresa dedicada a la venta y distribución del productos al por mayor al profesional de la alimentación y hostelería.\n\n

                    Actualmente, CASH COLOMBINO, S.A. junto con las empresas MANUEL BAREA, S.A., CASH BAREA, S.A., y CASH EXTREMEÑO, S.A. se encuentran asociadas bajo el paraguas de BAREA GRUPO.\n\n

                    El origen de BAREA data del año 1941, cuando Don Manuel Barea Ginés dio el pistoletazo de salida a un grupo empresarial que hoy día está compuesto por diversas mercantiles. Todas ellas con un carácter 100% familiar y siempre orientadas al cliente profesional del sector de la alimentación y la hostelería.\n\n

                    Asimismo, el grupo dispone de superficies “Cash and Carry” en Sevilla capital, Palomares del Río (Sevilla), Almendralejo (Badajoz) y Huelva capital.\n\n

                    También cuenta con una avanzada fábrica de pescado congelado y en salazón situada en Alcalá de Guadaira (Sevilla). Sus productos se ponen a disposición en puntos de venta de pescado y marisco congelado y también de bacalao en salazón en Sevilla, Alcalá de Guadaira (Sevilla), Mercasevilla, Mairena del Aljarafe (Sevilla), Dársena Pesquera de El Puerto de Santa María (Cádiz) y Mercamálaga.\n\n

                    Por último, se hace necesario señalar que posee una tienda especializada en hostelería, situada en el municipio hispalense de Mairena del Aljarafe.\n\n

                    BAREA GRUPO también distribuye a domicilio, a toda Andalucía, sus productos de alimentación en general, bebidas, droguería y congelados, así como su bacalao en salazón, en particular.\n</string>

    <string name="nosotros_manuel_barea">MANUEL BAREA S.A. es la empresa matriz de BAREA GRUPO, así como su plataforma central de distribución. Se encuentra radicada en Sevilla, en el Polígono Industrial Carretera Amarilla (PICA). A partir de ahí distribuye productos de alimentación, bebidas, droguería y perfumería.\n\n

                    Su amplia flota de vehículos le permite hacer llegar sus productos a las provincias de Sevilla, Huelva y Cádiz, fundamentalmente.\n\n

                    También pone a la disposición del profesional diferentes puntos de venta de pescado congelado, bacalao en salazón, marisco congelado y más productos de alimentación varia. Las ubicaciones son, el ya mencionado, Polígono Industrial Carretera Amarilla; el Polígono Industrial PISA, en Mairena del Aljarafe (Sevilla); los mercados centrales de Mercasevilla y Mercamálaga; y la zona portuaria de El Puerto de Santa María (Cádiz).\n\n

                    Destacar que las instalaciones del Polígono PISA, en Mairena del Aljarafe, forman parte de un nuevo concepto de instalaciones dedicadas especialmente al sector de la hostelería.\n\n

                    En cifras, se trata de 8.000 metros cuadrados de almacenamiento, 2.500 metros cuadrados de centro de producción, 1.000 metros cuadrados de puntos de venta y un amplio surtido de productos con más de 15.000 referencias al servicio de nuestros clientes.\n</string>

    <string name="nosotros_cash_barea">Cash Barea distribuye productos de alimentación, bebidas, droguería y perfumería a las provincias de Sevilla, Córdoba, Málaga, Huelva y Cádiz, entre otras. Consigue llegar a un territorio tan extenso gracias a su relevante flota de vehículos.</string>

    <string name="nosotros_cash_extremeno">Cash Extremeño. Su zona de actuación es Cáceres y Badajoz. Distribuye productos de alimentación, droguería, bebidas y perfumería gracias a la importante flota de vehículos con la que cuenta.</string>

    <string name="catalogos">En este apartado podrá estar al día de las últimas novedades que BAREA GRUPO pone a disposición de sus clientes.\n\n
                    El profesional de la alimentación y la hostelería encontrará en los siguientes catálogos las mejores promociones y beneficios del mercado, además de unos precios realmente competitivos. No espere más para conocer las innumerables ventajas que hemos preparado para usted y su negocio.\n\n</string>

    <string name="oferta_fidelidad">Se aplica a la factura un 10% de descuento en las compras de productos de fidelidad.</string>
    <string name="oferta_mensual">Los productos incluidos en esta oferta están rebajados sobre su precio habitual.</string>

    <string name="OF_FID">OFERTA FIDELIDAD</string>
    <string name="OF_MES">OFERTA MENSUAL</string>

    <string name="descargarFidelidad">Descargar oferta Fidelidad</string>
    <string name="descargarOfertaMes">Descargar oferta mensual</string>

    <string name="marcaMB">MANUEL BAREA</string>
    <string name="marcaOLIB">OLIBAREA</string>
    <string name="marcaCI">CUMBRE IBERICA</string>
    <string name="marcaCON">CONSEMUR</string>
    <string name="marcaBAR">BARESOL</string>
    <string name="marcaSV">SIMON VERDE</string>
    <string name="botonMP">Descargar marcas propias</string>
    <string name="toolbarDescarga">Descargar</string>

    <string name="marcas_propias_intro">En el lineal de venta de nuestros establecimientos tenemos más de 15.000 referencias.\nEl mayor surtido de nuestro entorno.\n
                    Entre ellas podemos encontrar más de 400 referencias de productos de marcas propias de gran calidad e inmejorable precio. Para ello concertamos acuerdos con los principales fabricantes nacionales, que garantizan unos productos con rigurosos controles de calidad.\n
    Entre las marcas propias tenemos:\n</string>
    <string name="marca_manuel_barea"><B>MANUEL BAREA</B> pone a tu disposición bacalao y más de 300 especies de otros pescados en salazón y congelados (atún, pescada, merluza, pez espada, acedías, marrajo). El marisco congelado también tiene una presencia importante con más de 200 especies como las gambas, las cigalas, el bogavante, las patas rusa, entre otras.\n</string>
    <string name="marca_olibarea">Aceite de oliva, patatas fritas, aperitivos varios o aceitunas y otros encurtidos se aúnan en la marca OLIBAREA.\n</string>
    <string name="marca_cumbre_iberica">CUMBRE IBÉRICA está formada por todo tipo de productos ibéricos. Jamón, chorizo, salchichón, caña de lomo o carne congelada de máxima calidad se reúnen bajo una marca de referencia que acoge, además, quesos y vinos.\n</string>
    <string name="marca_consemur">CONSEMUR recoge bajo su denominación a productos como frutos secos, conservas de pescado y de verduras, cacaos, artículos de hostelería, entre otros.\n</string>
    <string name="marca_baresol">BARESOL es reconocida por su excelente selección de aceites, mayonesas, salsas, etc.\n</string>
    <string name="marca_simon_verde">SIMÓN VERDE es una conocida marca de productos de limpieza (lavavajillas, fregasuelos, lejías, suavizantes, jabones), así como de productos de aseo personal (champús, geles, desodorantes, hidratantes).\n</string>
    <string name="marcas_propias">Se trabaja constantemente en incrementar los productos de marcas propias de BAREA GRUPO para abrir un mayor abanico de productos a nuestros clientes en los que calidad y el precio deben ser el referente.\n</string>
    <string name="linea">\n</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="buscarpornombre">Buscar por nombre</string>
    <string name="buscarporcodigo">Buscar por código</string>
    <string name="cod_de_barras_o_interno">Cód.de barras o interno</string>
    <string name="lectorcodigobarra">Lector Codigo Barra</string>
    <string name="limpiarpantalla">Limpiar pantalla</string>
    <string name="nombre_articulo">Nombre Artículo: aaa bbb ccc</string>
    <string name="informacion_busqueda">Teclee el código de barras o el código interno del producto si lo conoce o bien haga una busqueda por nombre escribiendo palabras separadas.</string>
    <string name="ubicacion">Ubicación :</string>
    <string name="ver_en_el_plano">Ver en el plano</string>
    <string name="ver_ubicacion">Ver ubicación del artículo</string>
    <string name="cantidad_pedida">Cantidad pedida</string>
    <string name="und_caja">Und./caja</string>
    <string name="log_in">LOG IN</string>
    <string name="nif">NIF</string>
    <string name="info_login">Para poder realizar pedidos a traves de la app necesita identificarse. Su representante le facilitará los datos necesarios para ello.</string>
    <string name="password">Password</string>
    <string name="recordar">Recordar</string>
    <string name="ud">24 ud.</string>
    <string name="cod">3121696</string>
    <string name="articulo">Azucar Blanquilla 1kg.</string>
    <string name="borrar_linea">Borrar Linea</string>
    <string name="editar_linea">Editar Linea</string>
    <string name="validar_linea">Añadir al pedido</string>
    <string name="resultados_de_la_busqueda">Resultados de la Busqueda:</string>
    <string name="telefono2">959 233 319</string>
    <string name="telefono1">959 233 330</string>
    <string name="fax">Fax: 959 233 800</string>
    <string name="telefonos">Telefonos oficina:</string>
    <string name="email">cashcolombino@barea.com</string>
    <string name="web">www.barea.com</string>
    <string name="icono_telefono">icono_telefono</string>
    <string name="icono_telefono2">icono_telefono2</string>
    <string name="textview">TextView</string>
    <string name="enviado">Enviado</string>
    <string name="n_de_referencias_del_pedido">Nº de referencias del pedido:</string>
    <string name="fecha_pedido">Pedido 01/01/2017</string>
    <string name="foto_receta_pequena">Foto receta pequeña</string>
    <string name="foto_receta_grande">Foto receta grande</string>


</resources>
