<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout = "@layout/tool_bar_main"
        android:id="@+id/tb_main"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/min_med"
            android:layout_marginLeft="@dimen/margenLeft"
            android:layout_marginRight="@dimen/margenLeft"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/marcas_propias_intro"
                    android:textSize="@dimen/texto_medio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/micro"
                    android:background="@color/colorPrimary"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagenMarcaManuelBarea"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/extralargo2"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/manuel_barea"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/marcaMB" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/marca_manuel_barea"
                    android:textSize="@dimen/texto_medio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/micro"
                    android:background="@color/colorPrimary"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/marca_olibarea"
                    android:textSize="@dimen/texto_medio"/>

                <ImageView
                    android:id="@+id/imagenMarcaOlibarea"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/extralargo2"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/olibarea"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/marcaOLIB" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/micro"
                    android:background="@color/colorPrimary"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagenMarcaCumbreIberica"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/extralargo2"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/cumbre_iberica"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/marcaCI" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/marca_cumbre_iberica"
                    android:textSize="@dimen/texto_medio"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/micro"
                    android:background="@color/colorPrimary"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/marca_consemur"
                    android:textSize="@dimen/texto_medio"/>

                <ImageView
                    android:id="@+id/imagenMarcaConsemur"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/extralargo2"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/consemur"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/marcaCON" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/micro"
                    android:background="@color/colorPrimary"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagenMarcaBaresol"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/extralargo2"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/baresol"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/marcaBAR" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/marca_baresol"
                    android:textSize="@dimen/texto_medio"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/micro"
                    android:background="@color/colorPrimary"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med"
                android:layout_marginBottom="@dimen/min_med"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/marca_simon_verde"
                    android:textSize="@dimen/texto_medio"/>

                <ImageView
                    android:id="@+id/imagenMarcaSimonVerde"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/extralargo2"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/simon_verde"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/marcaSV" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/micro"
                    android:background="@color/colorPrimary"
                    android:contentDescription=""
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/marcas_propias"
                    android:textSize="@dimen/texto_medio"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imagen_descarga_marcas_propias"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/largo"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="@dimen/min_med"
                    android:layout_marginBottom="@dimen/medio"
                    android:contentDescription="@string/botonMP"
                    android:src="@drawable/boton_marcas_propias" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_weight="0"
    android:layout_marginTop="@dimen/min_med">

    <fragment
        android:id="@+id/fragment"
        android:name="com.fconde.cashcolombinoapp.frg_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        tools:layout="@layout/lay_frg_bottom_bar" />

    </LinearLayout>

</LinearLayout>
