<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/tb_main"
        layout="@layout/tool_bar_main"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_med"
            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:id="@+id/catalogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margenLeft"
                android:layout_marginRight="@dimen/margenLeft"
                android:text="@string/catalogos"
                android:textSize="@dimen/texto_medio" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_med"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagen_fidelidad"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/extralargo2"
                    android:layout_weight="0.3"
                    android:contentDescription="@string/OF_FID"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fidelidad_mayo_17" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/oferta_fidelidad"
                    android:textSize="@dimen/texto_medio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/min_med"
                android:layout_marginTop="@dimen/min_med"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagen_oferta_mes"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/extralargo2"
                    android:layout_weight="0.3"
                    android:contentDescription="@string/OF_MES"
                    android:scaleType="fitCenter"
                    android:src="@drawable/oferta_mayo_17" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/oferta_mensual"
                    android:textSize="@dimen/texto_medio" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/min_med"
        android:layout_weight="0"
        android:background="@android:color/transparent">

        <fragment
            android:id="@+id/fragment"
            android:name="com.fconde.cashcolombinoapp.frg_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            tools:layout="@layout/lay_frg_bottom_bar" />

    </LinearLayout>

</LinearLayout>